--- a/src/locale/messages.fr.xlf
+++ b/src/locale/messages.fr.xlf
@@ -393,7 +393,7 @@
       </trans-unit>
       <trans-unit id="2807800733729323332" datatype="html">
         <source>Yes</source>
-        <target>No</target>
+        <target>Oui</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/register/components/register/register.component.html</context>
           <context context-type="linenumber">51</context>
