--- a/src/locale/messages.fr.xlf
+++ b/src/locale/messages.fr.xlf
@@ -293,7 +293,7 @@
       </trans-unit>
       <trans-unit id="7504575185985899009" datatype="html">
         <source>RSVP</source>
-        <target>INVITATION</target>
+        <target>INSCRIPTION</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/home/components/countdown-group/countdown-group.component.html</context>
           <context context-type="linenumber">42,44</context>
